Add player processing and agent view

--- a/ScratchLogBrowser/ScratchLogBrowser.csproj
+++ b/ScratchLogBrowser/ScratchLogBrowser.csproj
@@ -63,7 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventControl.cs" />
+    <Compile Include="JsonSerializationControl.cs" />
     <Compile Include="BrowserForm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
