--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -49,6 +49,13 @@
     <Compile Include="Events\UnknownEvent.cs" />
     <Compile Include="LogProcessor.cs" />
     <Compile Include="EVTCParser.cs" />
+    <Compile Include="Model\Agent.cs" />
+    <Compile Include="Model\Boss.cs" />
+    <Compile Include="Model\Enemy.cs" />
+    <Compile Include="Model\Log.cs" />
+    <Compile Include="Model\Player.cs" />
+    <Compile Include="Model\Profession.cs" />
+    <Compile Include="Model\EliteSpecialization.cs" />
     <Compile Include="Parsed\Enums\Activation.cs" />
     <Compile Include="Parsed\Enums\BuffRemove.cs" />
     <Compile Include="Parsed\Enums\FriendOrFoe.cs" />
