Add damage events

--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\AgentEvents.cs" />
+    <Compile Include="Events\BuffEvents.cs" />
+    <Compile Include="Events\DamageEvents.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Events\LogEvents.cs" />
     <Compile Include="Events\SkillEvents.cs" />
