--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -53,6 +53,7 @@
     <Compile Include="EVTCParser.cs" />
     <Compile Include="Model\Agent.cs" />
     <Compile Include="Model\Boss.cs" />
+    <Compile Include="Model\Gadget.cs" />
     <Compile Include="Model\NPC.cs" />
     <Compile Include="Model\Log.cs" />
     <Compile Include="Model\Player.cs" />
