--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -51,14 +51,14 @@
     <Compile Include="Events\UnknownEvent.cs" />
     <Compile Include="LogProcessor.cs" />
     <Compile Include="EVTCParser.cs" />
-    <Compile Include="Model\Agent.cs" />
-    <Compile Include="Model\Boss.cs" />
-    <Compile Include="Model\Gadget.cs" />
-    <Compile Include="Model\NPC.cs" />
+    <Compile Include="Model\Agents\Agent.cs" />
+    <Compile Include="Model\Agents\Boss.cs" />
+    <Compile Include="Model\Agents\EliteSpecialization.cs" />
+    <Compile Include="Model\Agents\Gadget.cs" />
+    <Compile Include="Model\Agents\NPC.cs" />
+    <Compile Include="Model\Agents\Player.cs" />
+    <Compile Include="Model\Agents\Profession.cs" />
     <Compile Include="Model\Log.cs" />
-    <Compile Include="Model\Player.cs" />
-    <Compile Include="Model\Profession.cs" />
-    <Compile Include="Model\EliteSpecialization.cs" />
     <Compile Include="Parsed\Enums\Activation.cs" />
     <Compile Include="Parsed\Enums\BuffRemove.cs" />
     <Compile Include="Parsed\Enums\FriendOrFoe.cs" />
