--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Model\Agents\Player.cs" />
     <Compile Include="Model\Agents\Profession.cs" />
     <Compile Include="Model\Log.cs" />
+    <Compile Include="Model\Skills\Skill.cs" />
     <Compile Include="Parsed\Enums\Activation.cs" />
     <Compile Include="Parsed\Enums\BuffRemove.cs" />
     <Compile Include="Parsed\Enums\FriendOrFoe.cs" />
