--- a/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
+++ b/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9DD47A76-3C69-4152-AA36-B656CAFFDECB}</ProjectGuid>
+    <ProjectGuid>{2A679D21-D206-4F4A-8546-8F0E86547A0D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScratchEVTCParser</RootNamespace>
-    <AssemblyName>ScratchEVTCParser</AssemblyName>
+    <RootNamespace>ScratchLogHTMLGenerator</RootNamespace>
+    <AssemblyName>ScratchLogHTMLGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,50 +32,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Eto.Generator, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\ScratchLogBrowser\dependencies\Eto.Generator.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Events\AgentEvents.cs" />
-    <Compile Include="Events\BuffEvents.cs" />
-    <Compile Include="Events\DamageEvents.cs" />
-    <Compile Include="Events\Event.cs" />
-    <Compile Include="Events\LogEvents.cs" />
-    <Compile Include="Events\SkillEvents.cs" />
-    <Compile Include="Events\UnknownEvent.cs" />
-    <Compile Include="LogProcessor.cs" />
-    <Compile Include="EVTCParser.cs" />
-    <Compile Include="Model\Agents\Agent.cs" />
-    <Compile Include="Model\Agents\Boss.cs" />
-    <Compile Include="Model\Agents\EliteSpecialization.cs" />
-    <Compile Include="Model\Agents\Gadget.cs" />
-    <Compile Include="Model\Agents\NPC.cs" />
-    <Compile Include="Model\Agents\Player.cs" />
-    <Compile Include="Model\Agents\Profession.cs" />
-    <Compile Include="Model\Log.cs" />
-    <Compile Include="Model\Skills\Skill.cs" />
-    <Compile Include="Parsed\Enums\Activation.cs" />
-    <Compile Include="Parsed\Enums\BuffRemove.cs" />
-    <Compile Include="Parsed\Enums\FriendOrFoe.cs" />
-    <Compile Include="Parsed\Enums\Result.cs" />
-    <Compile Include="Parsed\Enums\StateChange.cs" />
-    <Compile Include="Parsed\LogVersion.cs" />
-    <Compile Include="Parsed\ParsedAgent.cs" />
-    <Compile Include="Parsed\ParsedBossData.cs" />
-    <Compile Include="Parsed\ParsedCombatItem.cs" />
-    <Compile Include="Parsed\ParsedLog.cs" />
-    <Compile Include="Parsed\ParsedSkill.cs" />
+    <Compile Include="HtmlGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StatisticsCalculator.cs" />
-    <Compile Include="Statistics\LogStatistics.cs" />
-    <Compile Include="Statistics\TargetDamageData.cs" />
-    <Compile Include="StreamExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ScratchEVTCParser\ScratchEVTCParser.csproj">
+      <Project>{9dd47a76-3c69-4152-aa36-b656caffdecb}</Project>
+      <Name>ScratchEVTCParser</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
