Change HTML maker into a desktop application

--- a/ScratchLogMaker/ScratchLogMaker.csproj
+++ b/ScratchLogMaker/ScratchLogMaker.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B4EBA714-D8AE-42DD-9CD0-10F673D5AFA1}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ScratchLogMaker</RootNamespace>
     <AssemblyName>ScratchLogMaker</AssemblyName>
