Read logs into a byte array and work with that.
Actually a performance improvement over using a BinaryReader directly.

--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteArrayBinaryReader.cs" />
     <Compile Include="Events\AgentEvents.cs" />
     <Compile Include="Events\BuffEvents.cs" />
     <Compile Include="Events\DamageEvents.cs" />
