--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -58,8 +58,20 @@
     <Compile Include="Model\Agents\NPC.cs" />
     <Compile Include="Model\Agents\Player.cs" />
     <Compile Include="Model\Agents\Profession.cs" />
+    <Compile Include="Model\Encounters\AgentDeathResultDeterminer.cs" />
+    <Compile Include="Model\Encounters\DefaultEncounter.cs" />
+    <Compile Include="Model\Encounters\EncounterResult.cs" />
+    <Compile Include="Model\Encounters\IEncounter.cs" />
+    <Compile Include="Model\Encounters\IResultDeterminer.cs" />
+    <Compile Include="Model\Encounters\Phases\BuffAddTrigger.cs" />
+    <Compile Include="Model\Encounters\Phases\BuffRemoveTrigger.cs" />
+    <Compile Include="Model\Encounters\Phases\IPhaseTrigger.cs" />
+    <Compile Include="Model\Encounters\Phases\Phase.cs" />
+    <Compile Include="Model\Encounters\Phases\PhaseSplitter.cs" />
+    <Compile Include="Model\Encounters\Phases\StartTrigger.cs" />
     <Compile Include="Model\Log.cs" />
     <Compile Include="Model\Skills\Skill.cs" />
+    <Compile Include="Model\SpeciesIds.cs" />
     <Compile Include="Parsed\Enums\Activation.cs" />
     <Compile Include="Parsed\Enums\BuffRemove.cs" />
     <Compile Include="Parsed\Enums\FriendOrFoe.cs" />
@@ -73,7 +85,6 @@
     <Compile Include="Parsed\ParsedSkill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatisticsCalculator.cs" />
-    <Compile Include="Statistics\EncounterResult.cs" />
     <Compile Include="Statistics\LogStatistics.cs" />
     <Compile Include="Statistics\TargetDamageData.cs" />
     <Compile Include="StreamExtensions.cs" />
