--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Model\Encounters\DefaultEncounter.cs" />
     <Compile Include="Model\Encounters\EncounterResult.cs" />
     <Compile Include="Model\Encounters\IEncounter.cs" />
+    <Compile Include="Model\Encounters\IEncounterNameProvider.cs" />
     <Compile Include="Model\Encounters\IResultDeterminer.cs" />
     <Compile Include="Model\Encounters\Phases\BuffAddTrigger.cs" />
     <Compile Include="Model\Encounters\Phases\BuffRemoveTrigger.cs" />
@@ -86,6 +87,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatisticsCalculator.cs" />
     <Compile Include="Statistics\LogStatistics.cs" />
+    <Compile Include="Statistics\PhaseStats.cs" />
+    <Compile Include="Statistics\DamageData.cs" />
     <Compile Include="Statistics\TargetDamageData.cs" />
     <Compile Include="StreamExtensions.cs" />
   </ItemGroup>
