--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Model\Agents\Player.cs" />
     <Compile Include="Model\Agents\Profession.cs" />
     <Compile Include="Model\Encounters\AgentDeathResultDeterminer.cs" />
+    <Compile Include="Model\Encounters\BaseEncounter.cs" />
     <Compile Include="Model\Encounters\DefaultEncounter.cs" />
     <Compile Include="Model\Encounters\EncounterResult.cs" />
     <Compile Include="Model\Encounters\IEncounter.cs" />
