--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Model\Agents\Player.cs" />
     <Compile Include="Model\Agents\Profession.cs" />
     <Compile Include="Model\Encounters\AgentDeathResultDeterminer.cs" />
+    <Compile Include="Model\Encounters\AgentExitCombatDeterminer.cs" />
     <Compile Include="Model\Encounters\AgentNameEncounterNameProvider.cs" />
     <Compile Include="Model\Encounters\BaseEncounter.cs" />
     <Compile Include="Model\Encounters\CombinedResultDeterminer.cs" />
@@ -68,6 +69,8 @@
     <Compile Include="Model\Encounters\IEncounter.cs" />
     <Compile Include="Model\Encounters\IEncounterNameProvider.cs" />
     <Compile Include="Model\Encounters\IResultDeterminer.cs" />
+    <Compile Include="Model\Encounters\Phases\AgentEventTrigger.cs" />
+    <Compile Include="Model\Encounters\Phases\AndTrigger.cs" />
     <Compile Include="Model\Encounters\Phases\BuffAddTrigger.cs" />
     <Compile Include="Model\Encounters\Phases\BuffRemoveTrigger.cs" />
     <Compile Include="Model\Encounters\Phases\IPhaseTrigger.cs" />
