--- a/ScratchLogBrowser/ScratchLogBrowser.csproj
+++ b/ScratchLogBrowser/ScratchLogBrowser.csproj
@@ -66,6 +66,7 @@
     <Compile Include="AgentControl.cs" />
     <Compile Include="EventFilters.cs" />
     <Compile Include="EventListControl.cs" />
+    <Compile Include="GridViewSorter.cs" />
     <Compile Include="JsonSerializationControl.cs" />
     <Compile Include="BrowserForm.cs" />
     <Compile Include="Program.cs" />
