--- a/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
+++ b/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
@@ -39,7 +39,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HtmlGenerator.cs" />
+    <Compile Include="Page.cs" />
+    <Compile Include="Parts\DamageTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Section.cs" />
+    <Compile Include="Sections\General\BossPage.cs" />
+    <Compile Include="Sections\General\SummaryPage.cs" />
+    <Compile Include="Sections\Phases\PhasePage.cs" />
+    <Compile Include="Sections\Phases\PhaseTargetPage.cs" />
+    <Compile Include="Sections\ScratchData\AgentListPage.cs" />
+    <Compile Include="Sections\ScratchData\BuffDataPage.cs" />
+    <Compile Include="Sections\ScratchData\EventDataPage.cs" />
+    <Compile Include="Sections\ScratchData\SkillListPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScratchEVTCParser\ScratchEVTCParser.csproj">
