--- a/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
+++ b/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Parts\MultiTargetDamageTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Section.cs" />
+    <Compile Include="Sections\General\PlayerDetailPage.cs" />
     <Compile Include="Sections\General\BossPage.cs" />
     <Compile Include="Sections\General\SummaryPage.cs" />
     <Compile Include="Sections\Phases\PhasePage.cs" />
