--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -88,7 +88,6 @@
     <Compile Include="Model\Encounters\Phases\StartTrigger.cs" />
     <Compile Include="Model\Log.cs" />
     <Compile Include="Model\SkillIds.cs" />
-    <Compile Include="Model\SkillSlot.cs" />
     <Compile Include="Model\Skills\SkillAttunement.cs" />
     <Compile Include="Model\Skills\SkillData.cs" />
     <Compile Include="Model\Skills\Skill.cs" />
@@ -96,6 +95,7 @@
     <Compile Include="Model\Skills\SkillType.cs" />
     <Compile Include="Model\Skills\WeaponType.cs" />
     <Compile Include="Model\SpeciesIds.cs" />
+    <Compile Include="Model\WeaponSet.cs" />
     <Compile Include="Parsed\Enums\Activation.cs" />
     <Compile Include="Parsed\Enums\BuffRemove.cs" />
     <Compile Include="Parsed\Enums\FriendOrFoe.cs" />
