Add specialization detection (Mesmers for now)

--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -55,7 +55,13 @@
     <Compile Include="Events\LogEvents.cs" />
     <Compile Include="Events\SkillEvents.cs" />
     <Compile Include="Events\UnknownEvent.cs" />
+    <Compile Include="GameData\Detections\DamageWithSkillDetection.cs" />
+    <Compile Include="GameData\Detections\IDetection.cs" />
+    <Compile Include="GameData\Detections\InitialBuffDetection.cs" />
+    <Compile Include="GameData\Detections\SelfBuffApplyDetection.cs" />
     <Compile Include="GameData\GameSkillDataRepository.cs" />
+    <Compile Include="GameData\SkillIds.cs" />
+    <Compile Include="GameData\SpecializationDetections.cs" />
     <Compile Include="GW2ApiData.cs" />
     <Compile Include="GW2Api\V2\ApiSkill.cs" />
     <Compile Include="GW2Api\V2\ApiSkillRepository.cs" />
@@ -88,13 +94,13 @@
     <Compile Include="Model\Encounters\Phases\PhaseSplitter.cs" />
     <Compile Include="Model\Encounters\Phases\StartTrigger.cs" />
     <Compile Include="Model\Log.cs" />
-    <Compile Include="Model\SkillIds.cs" />
     <Compile Include="Model\Skills\SkillAttunement.cs" />
     <Compile Include="Model\Skills\SkillData.cs" />
     <Compile Include="Model\Skills\Skill.cs" />
     <Compile Include="Model\Skills\SkillSlot.cs" />
     <Compile Include="Model\Skills\SkillType.cs" />
     <Compile Include="Model\SpeciesIds.cs" />
+    <Compile Include="Model\CoreSpecialization.cs" />
     <Compile Include="Model\WeaponSet.cs" />
     <Compile Include="Model\WeaponType.cs" />
     <Compile Include="Parsed\Enums\Activation.cs" />
@@ -121,7 +127,9 @@
     <Compile Include="Statistics\LogStatistics.cs" />
     <Compile Include="Statistics\PhaseStats.cs" />
     <Compile Include="Statistics\DamageData.cs" />
-    <Compile Include="Statistics\PlayerData.cs" />
+    <Compile Include="Statistics\PlayerDataParts\BadgeType.cs" />
+    <Compile Include="Statistics\PlayerDataParts\PlayerBadge.cs" />
+    <Compile Include="Statistics\PlayerDataParts\PlayerData.cs" />
     <Compile Include="Statistics\SquadDamageData.cs" />
     <Compile Include="Statistics\TargetDamageData.cs" />
     <Compile Include="StreamExtensions.cs" />
