Add squad rotation

--- a/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
+++ b/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Section.cs" />
     <Compile Include="Sections\General\PlayerDetailPage.cs" />
     <Compile Include="Sections\General\BossPage.cs" />
+    <Compile Include="Sections\General\SquadRotationPage.cs" />
     <Compile Include="Sections\General\SummaryPage.cs" />
     <Compile Include="Sections\Phases\PhasePage.cs" />
     <Compile Include="Sections\Phases\PhaseTargetPage.cs" />
