--- a/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
+++ b/ScratchLogHTMLGenerator/ScratchLogHTMLGenerator.csproj
@@ -39,7 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultTheme.cs" />
     <Compile Include="HtmlGenerator.cs" />
+    <Compile Include="ITheme.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Parts\DamageTable.cs" />
     <Compile Include="Parts\MultiTargetDamageTable.cs" />
