--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>ScratchEVTCParser</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -118,6 +119,7 @@
     <Compile Include="Parsed\ParsedLog.cs" />
     <Compile Include="Parsed\ParsedSkill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BitConversions.cs" />
     <Compile Include="StatisticsCalculator.cs" />
     <Compile Include="Statistics\Buffs\AgentBuffData.cs" />
     <Compile Include="Statistics\Buffs\BuffData.cs" />
