--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\..\..\..\..\..\..\..\usr\lib\mono\xbuild\Microsoft\Microsoft.NET.Build.Extensions\net471\lib\System.Net.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Runtime.Serialization.Primitives, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <HintPath>..\packages\System.Runtime.Serialization.Primitives.4.3.0\lib\net46\System.Runtime.Serialization.Primitives.dll</HintPath>
@@ -69,11 +72,13 @@
     <Compile Include="Controls\LogDetailPanel.cs" />
     <Compile Include="Controls\PlayerDetailPanel.cs" />
     <Compile Include="ImageProvider.cs" />
+    <Compile Include="Logs\LogUpload.cs" />
     <Compile Include="Logs\LogFinder.cs" />
     <Compile Include="Logs\LogData.cs" />
     <Compile Include="Logs\LogPlayer.cs" />
     <Compile Include="Logs\ParsingStatus.cs" />
     <Compile Include="Logs\PlayerData.cs" />
+    <Compile Include="Logs\UploadState.cs" />
     <Compile Include="ManagerForm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\Annotations.cs" />
@@ -84,6 +89,8 @@
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsDialog.cs" />
     <Compile Include="Timing\Cooldown.cs" />
+    <Compile Include="Uploaders\DpsReportUploader.cs" />
+    <Compile Include="Uploaders\IUploader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
