--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -72,6 +72,7 @@
     <Compile Include="Controls\LogDetailPanel.cs" />
     <Compile Include="Controls\MultipleLogPanel.cs" />
     <Compile Include="Controls\PlayerDetailPanel.cs" />
+    <Compile Include="GameData.cs" />
     <Compile Include="GridViewSorter.cs" />
     <Compile Include="ImageProvider.cs" />
     <Compile Include="Logs\LogUpload.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Resources.cs" />
     <Compile Include="Sections\DebugData.cs" />
     <Compile Include="Sections\LogList.cs" />
+    <Compile Include="Sections\Statistics.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsDialog.cs" />
     <Compile Include="Timing\Cooldown.cs" />
