--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.cs" />
     <Compile Include="Sections\DebugData.cs" />
+    <Compile Include="Sections\GameDataGathering.cs" />
     <Compile Include="Sections\LogList.cs" />
     <Compile Include="Sections\Statistics.cs" />
     <Compile Include="Settings.cs" />
