Parser: Move encounter logic from processing to statistics

--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -48,7 +48,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ByteArrayBinaryReader.cs" />
     <Compile Include="Events\AgentEvents.cs" />
     <Compile Include="Events\BuffEvents.cs" />
     <Compile Include="Events\DamageEvents.cs" />
@@ -71,6 +70,8 @@
     <Compile Include="GW2ApiData.cs" />
     <Compile Include="GW2Api\V2\ApiSkill.cs" />
     <Compile Include="GW2Api\V2\ApiSkillRepository.cs" />
+    <Compile Include="IO\BitConversions.cs" />
+    <Compile Include="IO\ByteArrayBinaryReader.cs" />
     <Compile Include="LogProcessor.cs" />
     <Compile Include="EVTCParser.cs" />
     <Compile Include="Model\Agents\Agent.cs" />
@@ -79,26 +80,6 @@
     <Compile Include="Model\Agents\NPC.cs" />
     <Compile Include="Model\Agents\Player.cs" />
     <Compile Include="Model\Agents\Profession.cs" />
-    <Compile Include="Model\Encounters\AgentDeathResultDeterminer.cs" />
-    <Compile Include="Model\Encounters\AgentExitCombatDeterminer.cs" />
-    <Compile Include="Model\Encounters\AgentNameEncounterNameProvider.cs" />
-    <Compile Include="Model\Encounters\BaseEncounter.cs" />
-    <Compile Include="Model\Encounters\CombinedResultDeterminer.cs" />
-    <Compile Include="Model\Encounters\ConstantEncounterNameProvider.cs" />
-    <Compile Include="Model\Encounters\DefaultEncounter.cs" />
-    <Compile Include="Model\Encounters\EncounterResult.cs" />
-    <Compile Include="Model\Encounters\IEncounter.cs" />
-    <Compile Include="Model\Encounters\IEncounterNameProvider.cs" />
-    <Compile Include="Model\Encounters\IResultDeterminer.cs" />
-    <Compile Include="Model\Encounters\Phases\AgentEventTrigger.cs" />
-    <Compile Include="Model\Encounters\Phases\AndTrigger.cs" />
-    <Compile Include="Model\Encounters\Phases\BuffAddTrigger.cs" />
-    <Compile Include="Model\Encounters\Phases\BuffRemoveTrigger.cs" />
-    <Compile Include="Model\Encounters\Phases\IPhaseTrigger.cs" />
-    <Compile Include="Model\Encounters\Phases\Phase.cs" />
-    <Compile Include="Model\Encounters\Phases\PhaseDefinition.cs" />
-    <Compile Include="Model\Encounters\Phases\PhaseSplitter.cs" />
-    <Compile Include="Model\Encounters\Phases\StartTrigger.cs" />
     <Compile Include="Model\LogTime.cs" />
     <Compile Include="Model\Log.cs" />
     <Compile Include="Model\Skills\SkillAttunement.cs" />
@@ -121,7 +102,6 @@
     <Compile Include="Parsed\ParsedLog.cs" />
     <Compile Include="Parsed\ParsedSkill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BitConversions.cs" />
     <Compile Include="StatisticsCalculator.cs" />
     <Compile Include="Statistics\Buffs\AgentBuffData.cs" />
     <Compile Include="Statistics\Buffs\BuffData.cs" />
@@ -131,6 +111,28 @@
     <Compile Include="Statistics\Buffs\IBuffStackCollection.cs" />
     <Compile Include="Statistics\Buffs\BuffStatusSegment.cs" />
     <Compile Include="Statistics\Buffs\IntensityBuffStackCollection.cs" />
+    <Compile Include="Statistics\EncounterFinder.cs" />
+    <Compile Include="Statistics\Encounters\AgentNameEncounterNameProvider.cs" />
+    <Compile Include="Statistics\Encounters\BaseEncounter.cs" />
+    <Compile Include="Statistics\Encounters\ConstantEncounterNameProvider.cs" />
+    <Compile Include="Statistics\Encounters\DefaultEncounter.cs" />
+    <Compile Include="Statistics\Encounters\IEncounter.cs" />
+    <Compile Include="Statistics\Encounters\IEncounterNameProvider.cs" />
+    <Compile Include="Statistics\Encounters\Phases\AgentEventTrigger.cs" />
+    <Compile Include="Statistics\Encounters\Phases\AndTrigger.cs" />
+    <Compile Include="Statistics\Encounters\Phases\BuffAddTrigger.cs" />
+    <Compile Include="Statistics\Encounters\Phases\BuffRemoveTrigger.cs" />
+    <Compile Include="Statistics\Encounters\Phases\IPhaseTrigger.cs" />
+    <Compile Include="Statistics\Encounters\Phases\Phase.cs" />
+    <Compile Include="Statistics\Encounters\Phases\PhaseDefinition.cs" />
+    <Compile Include="Statistics\Encounters\Phases\PhaseSplitter.cs" />
+    <Compile Include="Statistics\Encounters\Phases\StartTrigger.cs" />
+    <Compile Include="Statistics\Encounters\Results\AgentDeathResultDeterminer.cs" />
+    <Compile Include="Statistics\Encounters\Results\AgentExitCombatDeterminer.cs" />
+    <Compile Include="Statistics\Encounters\Results\CombinedResultDeterminer.cs" />
+    <Compile Include="Statistics\Encounters\Results\EncounterResult.cs" />
+    <Compile Include="Statistics\Encounters\Results\IResultDeterminer.cs" />
+    <Compile Include="Statistics\IEncounterFinder.cs" />
     <Compile Include="Statistics\LogStatistics.cs" />
     <Compile Include="Statistics\PhaseStats.cs" />
     <Compile Include="Statistics\DamageData.cs" />
