--- a/ScratchEVTCParser/ScratchEVTCParser.csproj
+++ b/ScratchEVTCParser/ScratchEVTCParser.csproj
@@ -36,6 +36,10 @@
     <Reference Include="Eto.Generator, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\ScratchLogBrowser\dependencies\Eto.Generator.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RestSharp, Version=106.5.4.0, Culture=neutral, PublicKeyToken=598062e77f915f75">
       <HintPath>..\packages\RestSharp.106.5.4\lib\net452\RestSharp.dll</HintPath>
       <Private>True</Private>
