Update C# and .NET Framework versions in all projects to latest

--- a/EVTCAnalytics.Benchmark/EVTCAnalytics.Benchmark.csproj
+++ b/EVTCAnalytics.Benchmark/EVTCAnalytics.Benchmark.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GW2Scratch.EVTCAnalytics.Benchmark</RootNamespace>
     <AssemblyName>GW2Scratch.EVTCAnalytics.Benchmark</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
