--- a/EVTCAnalytics.HtmlLogs/EVTCAnalytics.HtmlLogs.csproj
+++ b/EVTCAnalytics.HtmlLogs/EVTCAnalytics.HtmlLogs.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ScratchLogHTMLGenerator</RootNamespace>
     <AssemblyName>EVTCAnalytics.HtmlLogs</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
