--- a/EVTCAnalytics.Tests/EVTCAnalytics.Tests.csproj
+++ b/EVTCAnalytics.Tests/EVTCAnalytics.Tests.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GW2Scratch.EVTCAnalytics.Tests</RootNamespace>
     <AssemblyName>GW2Scratch.EVTCAnalytics.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
