--- a/ArcdpsLogManager/packages.config
+++ b/ArcdpsLogManager/packages.config
@@ -4,6 +4,7 @@
   <package id="Eto.Platform.Gtk3" version="2.4.1" targetFramework="net471" />
   <package id="Eto.Platform.Wpf" version="2.4.1" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
+  <package id="RestSharp" version="106.5.4" targetFramework="net472" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="Xam.Plugins.Settings" version="4.0.0.10-beta" targetFramework="net471" />
